--- a/main.html
+++ b/main.html
@@ -7,6 +7,18 @@
 </head>
 
 <body>
+	<ul>
+  <li>
+    <a href="https://en.wikipedia.org/wiki/Golden_Retriever">
+      <img src="Golden_Retriever_img_link" alt="Golden Retriever" />
+    </a>
+  </li>
+  <li>
+    <a href="https://en.wikipedia.org/wiki/Poodle">
+      <img src="Poodle_img_link" alt="Poodle" />
+    </a>
+  </li>
+</ul>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
