--- a/main.html
+++ b/main.html
@@ -10,12 +10,12 @@
 	<ul>
   <li>
     <a href="https://en.wikipedia.org/wiki/Golden_Retriever">
-      <img src="Golden_Retriever_img_link" alt="Golden Retriever" />
+      <img src="Golden Retriever img link" alt="Golden Retriever" />
     </a>
   </li>
   <li>
     <a href="https://en.wikipedia.org/wiki/Poodle">
-      <img src="Poodle_img_link" alt="Poodle" />
+      <img src="Poodle img link" alt="Poodle" />
     </a>
   </li>
 </ul>
