--- a/main.html
+++ b/main.html
@@ -9,7 +9,7 @@
 <body>
 	<ul>
   <li>
-    <a href="https://en.wikipedia.org/wiki/Golden_Retriever">
+    <a href="https://en.wikipedia.org/wiki/Golden Retriever">
       <img src="Golden Retriever img link" alt="Golden Retriever" />
     </a>
   </li>
